fix dark mode colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,14 +33,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: 0 0% 3.9%;
+    --background: 0 0% 20.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 210 40% 45%;
+    --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
